# Homework_NYUv2

./: .gitignore  README.md  const_value.pkl  look_data.ipynb  practice.ipynb  pyproject.toml  segformer_block.py
notebooks/: get_data.ipynb
source/: calc_const.py  config.py  sim_mim.py  source.ipynb  source.py
source/Depth2HHA_python_master/: getHHA.py  practice.py
source/Depth2HHA_python_master/utils/: getCameraParam.py  rgbd_util.py  util.py
