[project]
name = "segmentation-task"
version = "0.1.0"
description = "This is a final task of DL lessons of Matsuo lab"
authors = [
    {name = "Ryohei-Con",email = "ryohei9420@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "transformers (>=4.57.3,<5.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "evaluate (>=0.4.6,<0.5.0)",
    "segments-ai (>=1.20.0,<2.0.0)",
    "opencv-contrib-python (>=4.12.0.88,<5.0.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
